# habari-mcp

./: CONTRIBUTING.md  Dockerfile  README.md  glama.json  pyproject.toml  server.json  smithery.yaml
.github/workflows/: ci.yml
src/habari_mcp/: __init__.py  server.py
tests/: test_smoke.py
